force-app/main/default/objects/TwitchUserScope__c/TwitchUserScope__c.object-meta.xml
<CustomObject>
    <description>Tracks all the scopes that the user selected</description>
    <label>Twitch User Scope</label>
    <nameField>
        <label>Twitch User Scope Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Twitch User Scopes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>