force-app/main/default/objects/TwitchUserScope__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the scope is active for the user</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>