force-app/main/default/objects/TwitchUserScope__c/fields/TwitchScope__c.field-meta.xml
<CustomField>
    <fullName>TwitchScope__c</fullName>
    <label>Twitch Scope</label>
    <referenceTo>TwitchScope__c</referenceTo>
    <relationshipLabel>Twitch User Scopes</relationshipLabel>
    <relationshipName>Twitch_User_Scopes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>