force-app/main/default/objects/TwitchUserScope__c/fields/TwitchUser__c.field-meta.xml
<CustomField>
    <fullName>TwitchUser__c</fullName>
    <label>Twitch User</label>
    <referenceTo>TwitchUser__c</referenceTo>
    <relationshipLabel>Twitch User Scopes</relationshipLabel>
    <relationshipName>TwitchUserScopes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>